[gd_scene load_steps=18 format=2]

[ext_resource path="res://code/map_generations/chunks.gd" type="Script" id=1]
[ext_resource path="res://scenes/level_game/level_game.gd" type="Script" id=2]
[ext_resource path="res://art/env.tres" type="Environment" id=3]
[ext_resource path="res://scenes/level_game/character_game.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/Quicksand-Regular.ttf" type="FontFile" id=5]
[ext_resource path="res://code/ui_elements/rytm_rule.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/themes/timeline_theme.tres" type="Theme" id=7]
[ext_resource path="res://art/shaders/motion_blur/motion_blur.tscn" type="PackedScene" id=9]

[sub_resource type="FontFile" id=4]
size = 26
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="Gradient" id=6]
offsets = PackedFloat32Array( 0, 0.0607029, 0.341853, 0.99361 )
colors = PackedColorArray( 0, 0, 0, 0, 0, 0, 0, 0.0392157, 0, 0, 0, 0.196078, 0, 0, 0, 0.372549 )

[sub_resource type="GradientTexture2D" id=7]
gradient = SubResource( 6 )
fill_from = Vector2( 1, 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = SubResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.376471 )

[sub_resource type="FontFile" id=9]
size = 74
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="InputEventAction" id=2]
action = "game_menu"

[sub_resource type="Shortcut" id=3]
shortcut = SubResource( 2 )

[node name="Node3D" type="Node3D"]
script = ExtResource( 2 )

[node name="C" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 5 )

[node name="C" type="PanelContainer" parent="C"]
anchor_right = 1.0
offset_bottom = 44.0
grow_horizontal = 2
minimum_size = Vector2( 300, 75 )
custom_styles/panel = SubResource( 8 )

[node name="C" type="HBoxContainer" parent="C/C"]
offset_right = 1680.0
offset_bottom = 75.0
custom_constants/separation = 81
alignment = 1

[node name="Jumps" type="Label" parent="C/C/C"]
offset_left = 410.0
offset_top = 21.0
offset_right = 608.0
offset_bottom = 54.0
text = "Jumps: {Jumps}"
align = 1

[node name="Time" type="Label" parent="C/C/C"]
offset_left = 689.0
offset_top = 21.0
offset_right = 979.0
offset_bottom = 54.0
text = "Time: {Min}.{Sec}:{Ssec}"
align = 1

[node name="Acc" type="Label" parent="C/C/C"]
offset_left = 1060.0
offset_top = 21.0
offset_right = 1269.0
offset_bottom = 54.0
text = "Accuracy: {Acc}%"
align = 1

[node name="TestMode" type="PanelContainer" parent="C"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.5
offset_top = -44.0
offset_right = 73.5
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="C/TestMode"]
offset_left = 7.0
offset_top = 9.0
offset_right = 140.0
offset_bottom = 34.0
custom_colors/font_color = Color( 0, 1, 0.0862745, 1 )
text = "TEST MODE"
align = 1

[node name="RytmRule" parent="C" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Menu" type="Panel" parent="."]
process_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 7 )
custom_constants/separation = 36
alignment = 1

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
offset_top = 373.0
offset_right = 200.0
offset_bottom = 466.0
custom_fonts/font = SubResource( 9 )
text = "Menu"
align = 1

[node name="BtnHelp" type="Button" parent="Menu/VBoxContainer"]
offset_top = 502.0
offset_right = 200.0
offset_bottom = 536.0
minimum_size = Vector2( 200, 0 )
shortcut = SubResource( 3 )
text = "Help"

[node name="BtnContinue" type="Button" parent="Menu/VBoxContainer"]
offset_top = 572.0
offset_right = 200.0
offset_bottom = 606.0
minimum_size = Vector2( 200, 0 )
shortcut = SubResource( 3 )
text = "Continue"

[node name="BtnExit" type="Button" parent="Menu/VBoxContainer"]
offset_top = 642.0
offset_right = 200.0
offset_bottom = 676.0
text = "Exit"

[node name="Chunks" type="Node3D" parent="."]
script = ExtResource( 1 )

[node name="Character" parent="." instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 6.1, 0 )

[node name="motion_blur" parent="Character/Camera3D" index="0" instance=ExtResource( 9 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D( 0.707107, 0.5, -0.5, -0.122788, 0.783188, 0.60954, 0.696364, -0.369616, 0.615192, -3.7, 7.7, 0 )
light_size = 1.0
light_bake_mode = 0
shadow_enabled = true
directional_shadow_split_1 = 0.05
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.0
directional_shadow_bias_split_scale = 0.0

[connection signal="timeout" from="C/RytmRule" to="." method="_on_RytmRule_timeout"]
[connection signal="pressed" from="Menu/VBoxContainer/BtnHelp" to="." method="_on_BtnHelp_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/BtnContinue" to="." method="_on_BtnContinue_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/BtnExit" to="." method="_on_BtnExit_pressed"]
[connection signal="area_entered" from="Character" to="." method="_on_Character_area_entered"]

[editable path="Character"]
